# kanal

./: .gitignore  Cargo.toml  LICENSE  README.md  pre_push.sh  rustfmt.toml
.github/workflows/: checks.yml  linux.yml  osx.yml
benches/: async.rs  common.rs  sync.rs
src/: backoff.rs  error.rs  future.rs  internal.rs  kanal_tests.rs  lib.rs  mutex.rs  oneshot.rs  pointer.rs  primitives.rs  signal.rs  stack_cell.rs  state.rs  sync.rs
tests/: async.rs  async_test.rs  loom.rs  oneshot_test.rs  sync.rs  sync_test.rs
tests/common/: mod.rs
tests/utils/: mod.rs
