[package]
name = "kanal"
version = "0.1.0-pre7"
edition = "2021"
authors = ["Khashayar Fereidani"]
description = "The fast sync and async channel that Rust deserves"
repository = "https://github.com/fereidani/kanal"
documentation = "https://docs.rs/kanal"
keywords = ["channel", "mpsc", "mpmc", "async", "golang"]
categories = ["concurrency", "data-structures","asynchronous"]
license = "MIT"
readme = "README.md"

[dependencies]
futures-core = "0.3"
lock_api = "0.4"
pin-project-lite = "0.2"

[target.'cfg(any(target_os = "linux",target_os = "android",target_os = "openbsd",target_os = "freebsd",target_os = "dragonbsd"))'.dependencies]
libc = "0.2"

[dev-dependencies]
anyhow = "1.0"
crossbeam = "0.8"
tokio = { version = "1", features =["rt-multi-thread", "test-util", "macros"] }
futures = "0.3"

[features]
async=[]
std-mutex=[]
default = ["async"]
