[package]
name = "kanal"
version = "0.2.0-beta1"
edition = "2021"
authors = ["Khashayar Fereidani"]
description = "The fast sync and async channel that Rust deserves"
repository = "https://github.com/fereidani/kanal"
documentation = "https://docs.rs/kanal"
keywords = ["channel", "mpsc", "mpmc", "async"]
categories = ["concurrency", "data-structures", "asynchronous"]
license = "MIT"
readme = "README.md"

[dependencies]
branches = "0.4"
cacheguard = "0.1"
futures-core = { version = "0.3", optional = true }
lock_api = "0.4"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.8"
crossbeam = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "test-util", "macros"] }
futures = "0.3"

# Model checker for concurrent code, active only with RUSTFLAGS="--cfg loom".
# See tests/loom.rs for how to run the loom test suite.
[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", features = ["futures"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

[features]
async = ["futures-core"]
std-mutex = []
default = ["async"]

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "async"
harness = false
